Adding App pages

--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+  <meta charset="utf-8">
+  <title>TodoApp</title>
+  <base href="/todo-app-ai/">  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<link rel="stylesheet" href="styles.181132654e7540b91e14.css"></head>
 <body>
-    
-</body>
+  <app-root></app-root>
+<script src="runtime-es2015.cdfb0ddb511f65fdc0a0.js" type="module"></script><script src="runtime-es5.cdfb0ddb511f65fdc0a0.js" nomodule defer></script><script src="polyfills-es5.44547b4d4a23c72d0f9c.js" nomodule defer></script><script src="polyfills-es2015.ffa9bb4e015925544f91.js" type="module"></script><script src="main-es2015.b5a36370290074173366.js" type="module"></script><script src="main-es5.b5a36370290074173366.js" nomodule defer></script></body>
 </html>
