Adding App pages

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>TodoApp</title>
-  <base href="/todo-app-ai/">  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <base href="./">  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.181132654e7540b91e14.css"></head>
 <body>
