--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,14 @@
 <head>
   <meta charset="utf-8">
   <title>TodoApp</title>
-  <base href="./">  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <base href="./">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="manifest" href="manifest.webmanifest">
+  <meta name="theme-color" content="#1976d2">
 <link rel="stylesheet" href="styles.181132654e7540b91e14.css"></head>
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.cdfb0ddb511f65fdc0a0.js" type="module"></script><script src="runtime-es5.cdfb0ddb511f65fdc0a0.js" nomodule defer></script><script src="polyfills-es5.44547b4d4a23c72d0f9c.js" nomodule defer></script><script src="polyfills-es2015.ffa9bb4e015925544f91.js" type="module"></script><script src="main-es2015.b5a36370290074173366.js" type="module"></script><script src="main-es5.b5a36370290074173366.js" nomodule defer></script></body>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
+<script src="runtime-es2015.cdfb0ddb511f65fdc0a0.js" type="module"></script><script src="runtime-es5.cdfb0ddb511f65fdc0a0.js" nomodule defer></script><script src="polyfills-es5.44547b4d4a23c72d0f9c.js" nomodule defer></script><script src="polyfills-es2015.ffa9bb4e015925544f91.js" type="module"></script><script src="main-es2015.57496931535c4c36e2b4.js" type="module"></script><script src="main-es5.57496931535c4c36e2b4.js" nomodule defer></script></body>
 </html>
